k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ecom-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ecom-frontend
  template:
    metadata:
      labels:
        app: ecom-frontend
    spec:
      containers:
        - name: ecom-frontend
          image: ecom-frontend-app:latest
          imagePullPolicy: Never

          ports:
            - containerPort: 3000

          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"

            limits:
              memory: "512Mi"
              cpu: "500m"
