k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ecom-frontend-service
spec:
  selector:
    app: ecom-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000

  type: ClusterIP
